full-moon/tests/roblox_cases/fail/parser/generic_nil/error_display.snap
---
source: full-moon/tests/fail_cases.rs
expression: "String::from_utf8(output.into_inner()).unwrap()"
---
error[ast]: unexpected token, this needs to be a statement
  ┌─ source.lua:1:15
  │
1 │ type Foo = nil<string>
  │               ^

error[ast]: unexpected expression when looking for a statement
  ┌─ source.lua:1:22
  │
1 │ type Foo = nil<string>
  │                      ^

error[ast]: unexpected token, this needs to be a statement
  ┌─ source.lua:1:22
  │
1 │ type Foo = nil<string>
  │                      ^


